--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,15 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
+    "luxon": "^3.4.4",
+    "mongoose": "^8.1.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.3",
     "pug": "2.0.0-beta11"
