--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mongoose": "^8.1.3",
     "morgan": "~1.9.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
     "pug": "2.0.0-beta11"
   }
